<resources>
    <string name="hello">Hello World, Activity_Main!</string>
    <string name="app_name">康泰云健康</string>
    <string name="kill">kill</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="HOST">https://data2.contec365.com/login.php</string>
    <string name="com_taobao_tae_sdk_login_progress_message">Logging in</string>
    <string name="com_taobao_tae_sdk_loading_progress_message">Loading</string>
    <string name="com_taobao_tae_sdk_authorize_title">Login authorization</string>
    <string name="com_taobao_tae_sdk_system_exception">System exception</string>
    <string name="com_taobao_tae_sdk_trade_confirm_progress_message">交易确认中</string>
    <string name="com_taobao_tae_sdk_trade_title">确认下单</string>
    <string name="com_taobao_tae_sdk_alert_message">您离开太久了，请重新操作</string>
    <string name="com_taobao_tae_sdk_network_not_available_message">网络无法连接</string>
    <string name="com_taobao_tae_sdk_logout_fail_message">登出失败</string>
    <string name="com_taobao_tae_sdk_cart_title">购物车</string>
    <string name="tae_sdk_login_qr_icon_taobao"></string>
    <string name="tae_sdk_login_qr_icon_close"></string>
    <string name="tae_sdk_qr_login_icon_scan"></string>
    <string name="tae_sdk_qr_login_icon_password"></string>
    <string name="com_taobao_tae_sdk_qr_login_title_bar_text">淘宝账号登录</string>
    <string name="app_name_cn">康泰云健康</string>
    <string name="strIfReallyExit">是否退出远程客户端程序？</string>
    <string name="strInputPswHint">输入密码</string>
    <string name="opt_autoLogin">自动登录</string>
    <string name="opt_cancle_autologin">退出程序</string>
    <string name="cancel">Cancell</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="nosdcard">Please insert SD card</string>
    <string name="i_disable">Network disconnected</string>
    <string name="connectting">Connecting</string>
    <string name="register_error">Verification code error</string>
    <string name="register_unerror">出现异常错误\10重新填写信息</string>
    <string name="register_success">congratulations\10successful registration</string>
    <string name="register_changenum">改变</string>
    <string name="register_error_authcode">Verification code error</string>
    <string name="checkver">Check for updates</string>
    <string name="download_progress">Download progress</string>
    <string name="waiting_connection">Waiting for connection</string>
    <string name="issearching">Searching</string>
    <string name="person_user_only">帐号不能为空</string>
    <string name="no_device">Device or Bluetooth not turned on</string>
    <string name="healthreport">Health report</string>
    <string name="healthadvice">Health advice</string>
    <string name="productinfo">产品说明</string>
    <string name="setting_more">更多</string>
    <string name="str_advice_health">健康建议</string>
    <string name="str_user_info">我的信息</string>
    <string name="supload">上传</string>
    <string name="wait_uploading">等待上传</string>
    <string name="nodata_or_data_erro">接收失败</string>
    <string name="no_data_device">无新数据</string>
    <string name="this_uploaded">无新数据</string>
    <string name="devices_not_found">未发现设备</string>
    <string name="devices_havefailduploadfile">上传服务器失败</string>
    <string name="s_d_i">正在搜索</string>
    <string name="pageat">第</string>
    <string name="pageno">页</string>
    <string name="record_loading">加载中...</string>
    <string name="no_flow_record">您当前没有任何记录!</string>
    <string name="record_total">一共</string>
    <string name="record_betweentotalpage">页，这是第</string>
    <string name="waiting">请稍等</string>
    <string name="devices_name">内容</string>
    <string name="please_research">连接失败</string>
    <string name="no_items">暂无信息</string>
    <string name="flow_record_upload">上传</string>
    <string name="flow_record_download">下载</string>
    <string name="flow_record_date">日期</string>
    <string name="flow_report">流量报告</string>
    <string name="cannot_support_record">您的设备目前不支持流量统计！</string>
    <string name="record_updates">升级记录</string>
    <string name="kindly_remrmber">温馨提示</string>
    <string name="theme_default">默认</string>
    <string name="UpgradeRecords_txt">UpgradeRecords.txt</string>
    <string name="device_name_50EW">血氧仪</string>
    <string name="device_name_50IW">血氧仪</string>
    <string name="device_name_VESD">可视听诊器</string>
    <string name="device_name_SP10W">肺活量计</string>
    <string name="device_name_SXT">血糖仪</string>
    <string name="device_name_M50W">动态血压仪</string>
    <string name="device_name_08AW">血压计</string>
    <string name="device_name_WT">电子健康秤</string>
    <string name="device_name_Fhr01">胎心仪</string>
    <string name="device_name_Pm85">心电终端</string>
    <string name="upload_base_50D">血氧计步器</string>
    <string name="upload_base_50EW">血氧</string>
    <string name="upload_base_10W">肺活量</string>
    <string name="upload_base_SXT">血糖</string>
    <string name="upload_base_50W">血压</string>
    <string name="upload_base_8AW">血压</string>
    <string name="upload_base_WT">健康秤</string>
    <string name="upload_base_FHR01">胎心</string>
    <string name="upload_base_PM85">远程心电</string>
    <string name="upload_base_8000gw">12导心电</string>
    <string name="upload_base_ear_temp">耳温枪</string>
    <string name="scan_login_cancel">取消登录</string>
    <string name="scan_login_close">关闭</string>
    <string name="scan_login_confirm">体检机确认登录</string>
    <string name="scan_login">登录</string>
    <string name="upload_base_50D_en">oxygenpedometer</string>
    <string name="upload_base_50EW_en">oxygen</string>
    <string name="upload_base_10W_en">FVC</string>
    <string name="upload_base_SXT_en">blood-sugar</string>
    <string name="upload_base_50W_en">blood-pressure</string>
    <string name="upload_base_8AW_en">blood-pressure</string>
    <string name="upload_base_WT_en">Health-Scale</string>
    <string name="upload_base_FHR01_en">Fetal heart rate</string>
    <string name="upload_base_8000gw_en">ECG</string>
    <string name="upload_base_ear_temp_en">Ear Thermometer</string>
    <string name="not_ask_next">下次不再询问，自动升级</string>
    <string name="need_update">有新版本，是否更新？</string>
    <string name="network_anomalies">网络不稳定</string>
    <string name="connection_timeout">网络不稳定</string>
    <string name="open_bluetooth">这个应用需要打开蓝牙，是否打开？</string>
    <string name="input_phone_number">输入手机号</string>
    <string name="s">s</string>
    <string name="psw_len">密码长度在\106-16位之间</string>
    <string name="re_psw_text">密码不一致</string>
    <string name="register_ing">正在注册...</string>
    <string name="register_sending">正在发送请求...</string>
    <string name="login_logining">正在登录</string>
    <string name="register_sended">已发送</string>
    <string name="twice_password_no_same_length">密码不一致</string>
    <string name="collecting_datas">接收数据</string>
    <string name="pairing">配对密码：7762</string>
    <string name="bt_pairing">配对中</string>
    <string name="number">序号</string>
    <string name="menu_tittle">康泰云健康 4.5</string>
    <string name="menu_about">      本应用配合康泰公司多款医疗检测设备，能够通过蓝牙收取设备数据，并上传数据到服务器；能够查看个人信息、健康档案、个人病史、趋势图表等。\10      现支持以下设备：\10      血氧仪：CMS50EW、CMS50IW\10      血压计：ABPM50、CONTEC08A\10      肺活量计：SP10\10      血糖仪：SXT\10      电子健康秤：WT100\10      胎儿心率仪：Sonoline-S</string>
    <string name="delete">删 除</string>
    <string name="str_upload_case">传输数据</string>
    <string name="str_upload_success">传输成功</string>
    <string name="str_upload_failed">传输失败</string>
    <string name="hospital_name">医院名称</string>
    <string name="register_input_hostipal_name">康泰健康管理医院</string>
    <string name="register_saoyisao">扫一扫</string>
    <string name="no_code">点击这里进行二维码扫描</string>
    <string name="sweep">请将条码置于取景框内扫描</string>
    <string name="selecthospition">请选择医院</string>
    <string name="histtory_record_date">日期/时间</string>
    <string name="input_account">输入手机号</string>
    <string name="next">下一步</string>
    <string name="phone_edit_promt">为了验证您的身份,我们将会发送短信验证码</string>
    <string name="set_psw">设置密码</string>
    <string name="sure_psw">确认密码</string>
    <string name="identy_code_promt">包含验证的短信已发送至</string>
    <string name="retry_but">重新发送</string>
    <string name="regis_identkey_hint">输入验证码</string>
    <string name="finish">完成</string>
    <string name="product_descrip_text">产品说明</string>
    <string name="data_transfer_text">数据采集</string>
    <string name="check_report_text">查看报告</string>
    <string name="commit_but">提 交</string>
    <string name="company_website">网址：</string>
    <string name="company_website_http">http://www.contecmed.com.cn</string>
    <string name="advice_hint">欢迎提出宝贵的意见和建议,您留下的每个字都将用来改善我们的软件。</string>
    <string name="exit_again">再按一次退出程序</string>
    <string name="need_device">如需上传请打开设备...</string>
    <string name="str_deviceslist_startrun">开 始</string>
    <string name="str_step">步</string>
    <string name="str_hour">时</string>
    <string name="str_minutes">分</string>
    <string name="str_second">秒</string>
    <string name="str_second_unit">秒</string>
    <string name="theme_set_display_default">默 认</string>
    <string name="checkupdate_cureent">当前版本:</string>
    <string name="versionupdatatip">版本更新</string>
    <string name="str_refresh">刷新</string>
    <string name="str_loadingnetview">正在加载...</string>
    <string name="str_loadingneterror">网络不给力!点击刷新试试</string>
    <string name="sendemailcontextisnotnull">请您输入发送内容</string>
    <string name="str_pedometer_step_length_mm">(厘米)</string>
    <string name="str_pedometer_sensitivity">灵敏度</string>
    <string name="str_pedometer_sensitivity_promtp">*灵敏度将自动同步到计步器中</string>
    <string name="str_pedometer_sensitivity_low">低</string>
    <string name="str_pedometer_sensitivity_mid">中</string>
    <string name="str_pedometer_sensitivity_high">高</string>
    <string name="input_phone_register">手机号:</string>
    <string name="register_input_code">验证码:</string>
    <string name="register_input_code_hint">请输入短信验证码</string>
    <string name="pedometer_set">计步设置</string>
    <string name="aboutus_text">关于我们</string>
    <string name="user_idcard">身份证:</string>
    <string name="user_idcardhinttip">保证您健康档案的唯一性</string>
    <string name="registheight">身    高:</string>
    <string name="registheighthint">用于准确生成您的BMI指数</string>
    <string name="send_identify">获取验证码</string>
    <string name="str_server_name">请输入服务器地址</string>
    <string name="str_report_name">请输入“查看报告”地址</string>
    <string name="str_phonenumcannotregist">此号码已注册，请修改号码或直接登录</string>
    <string name="resetpwdtip">重置成功后密码是您手机号后六位，请及时修改</string>
    <string name="resetpwdphone">请输入您的手机号码</string>
    <string name="resetpwd">重置密码</string>
    <string name="aboutus_company">康泰医学系统（秦皇岛）股份有限公司\10河北省秦皇岛市经济技术开发区秦皇西大街112号</string>
    <string name="aboutus_company_phone">国际销售专线： 0335-8015430\10国内销售专线： 4008 105 106\10远程医疗专线： 4008 168 189\10售后服务专线： 4006 526 552</string>
    <string name="aboutus_jdstore">京东·康泰医疗旗舰店\10网址：http://contec.jd.com\10扫描二维码打开旗舰店</string>
    <string name="aboutus_contec">远程健康网站\10网址：http://www.contec365.com\10您的个人健康专家</string>
    <string name="aboutus_wechat">微信·康泰云健康\10扫描以下二维码关注</string>
    <string name="aboutus_phms">App·远程健康\10扫描以下二维码下载，支持Android/IOS</string>
    <string name="aboutus_moredevices">更多家用健康设备等您选用！</string>
    <string name="aboutus_devicesshow">常规检测类产品\10● 胎儿心率仪/母婴监护仪\10● 脉搏血氧仪/腕式血氧仪\10● 电子血压计/动态血压监护仪\10● 心电图机/心电HOLTER/心电工作站\10● 脑电地形图\10● 肺活量计\10● 多参数监护仪\10● 动脉硬化测仪\10● B超\10● 睡眠初筛仪\10● 尿液分析仪\10● 制氧机</string>
    <string name="new_register_finish">提交信息</string>
    <string name="register_input_select">选择注册方式</string>
    <string name="mail">邮箱</string>
    <string name="mail_register_hint">请输入您的邮箱号</string>
    <string name="mail_colon">邮箱：</string>
    <string name="input_new_secret">请输入新密码</string>
    <string name="repit_input_new_secret">再次输入新密码</string>
    <string name="new_secret">新密码：</string>
    <string name="please_select_your_id_sort">请选择您的账号类型</string>
    <string name="phone">手机</string>
</resources>