<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#f5f5f5" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout style="@style/style_set_register_title_layout">
        <Button android:id="@+id/back_btn" style="@style/style_set_register_title_back"/>
        <TextView android:text="@string/register_input_select" style="@style/style_set_register_title_text"/>
    </RelativeLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@color/white" android:padding="15dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="25dp">
        <ImageView android:background="@drawable/grad_mail_icon" android:layout_width="23dp" android:layout_height="23dp" android:layout_marginRight="15dp"/>
        <TextView android:textColor="#333333" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10dp" android:text="@string/mail"/>
        <EditText android:textSize="13dp" android:gravity="center_vertical" android:id="@+id/input_mail" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/mail_register_hint"/>
    </LinearLayout>
    <Button android:textSize="20sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/to_register" android:background="#33cc60" android:padding="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="25dp" android:layout_marginRight="25dp" android:text="@string/new_register_finish"/>
</LinearLayout>
