<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:my="http://schemas.android.com/apk/res/com.contec.phms" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:user="http://schemas.android.com/apk/res-auto" xmlns:app="http://schemas.android.com/apk/res/com.contec" android:layout_gravity="center" android:background="@drawable/drawable_dialog_bg_green" android:paddingLeft="25dp" android:paddingRight="25dp" android:paddingBottom="15dp" android:layout_width="280dp" android:layout_height="220dp">
    <AutoCompleteTextView android:id="@+id/editText2" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/str_report_name" android:ems="10" android:layout_below="@+id/editText1" android:layout_centerHorizontal="true"/>
    <AutoCompleteTextView android:id="@+id/editText1" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:hint="@string/str_server_name" android:ems="10" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginTop="15dp" android:layout_marginBottom="5dp" android:layout_below="@+id/editText2">
        <Button android:textColor="@color/white" android:id="@+id/button1" android:background="@drawable/drawable_loginpage_button_register_new" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="3dp" android:text="@string/ok" android:layout_weight="1"/>
        <Button android:textColor="@color/white" android:id="@+id/button2" android:background="@drawable/drawable_loginpage_button_register_new" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="3dp" android:text="@string/cancel" android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
